# Cmake-entry-code-exercises

t1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.c~
t2/: CMakeLists.txt
t2/doc/: hello.txt
t2/src/: main.c
t3/: CMakeLists.txt
t3/lib/: .CMakeLists.txt.swp  CMakeLists.txt  hello.c
t4/src/: CMakeLists.txt
t5/src/: main.c
t6/cmake/: FindHELLO.cmake
